Bug 1306830 - Correctly set the top of the font area to be drawn. r=jrmuizel, a=test-only

MozReview-Commit-ID: IIBJPzD3hyb

--HG--
extra : source : 98e0a72e854f79676b860ff48e2abae9550940a0